CSS-only checkbox/radio buttons (#247)
* CSS-only checkbox/radio buttons

* btn states, visual tests

* some cleanup

* z-index in button group

--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -10,21 +10,22 @@
     white-space: nowrap;
     vertical-align: middle;
     user-select: none;
-    border: $input-border-width solid transparent;
+    border: $btn-border-width solid transparent;
     @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-border-radius);
     @include box-shadow($btn-box-shadow);
     @include transition($btn-transition);
 
     &:hover,
     &:focus,
-    &.focus {
+    .btn-check-input:focus ~ & {
         text-decoration: none;
         @include box-shadow($btn-box-shadow);
     }
 
     // Disabled comes first so active can restyle
     &.disabled,
-    &:disabled {
+    &:disabled,
+    .btn-check-input:disabled ~ & {
         cursor: $cursor-disabled;
         opacity: $btn-disabled-opacity;
         @include box-shadow(none);
@@ -32,16 +33,22 @@
 
     &:not(:disabled):not(.disabled):active,
     &:not(:disabled):not(.disabled).active,
+    .btn-check-input:not(:disabled):checked ~ &,
     .open > & {
         // Remove the gradient for the pressed/active state
         background-image: none;
         @include box-shadow($btn-active-box-shadow);
+    }
 
-        &:hover,
-        &:focus,
-        &.focus {
-            @include box-shadow($btn-active-box-shadow);
-        }
+    &:not(:disabled):not(.disabled):active:hover,
+    &:not(:disabled):not(.disabled).active:hover,
+    &:not(:disabled):not(.disabled):active:focus,
+    &:not(:disabled):not(.disabled).active:focus,
+    .btn-check-input:not(:disabled):checked:focus ~ &,
+    .btn-check-input:not(:disabled):checked ~ &:hover,
+    .open > &:hover,
+    .open > &:focus {
+        @include box-shadow($btn-active-box-shadow);
     }
 
     // Default color
@@ -50,7 +57,8 @@
 
 // Future-proof disabling of clicks on `<a>` elements
 a.btn.disabled,
-fieldset:disabled a.btn {
+fieldset:disabled a.btn,
+.btn-check-input:disabled ~ .btn {
     pointer-events: none;
 }
 
@@ -129,4 +137,31 @@ input[type="button"] {
     &.btn-block {
         width: 100%;
     }
+}
+
+// Checkbox and radio button
+.btn-check {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+// Place input behind the label
+.btn-check-input {
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+    pointer-events: none;
+
+    // Override label margin
+    ~ .btn {
+        margin-bottom: 0;
+    }
+
+    // Force outline on for inputs
+    // stylelint-disable declaration-block-no-duplicate-properties
+    &:focus ~ .btn {
+        outline: 1px dotted;
+        outline: 5px auto -webkit-focus-ring-color;
+    }
+    // stylelint-enable declaration-block-no-duplicate-properties
 }
