--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -374,12 +374,6 @@ input[type="radio"],
 input[type="checkbox"] {
     box-sizing: border-box; // 1. Add the correct box sizing in IE 10-
     padding: 0; // 2. Remove the padding in IE 10-
-
-    // Apply a disabled cursor for radios and checkboxes.
-    // Note: Neither radios nor checkboxes can be readonly.
-    &:disabled {
-        cursor: $cursor-disabled;
-    }
 }
 
 input[type="date"],
@@ -468,6 +462,7 @@ output {
 
 summary {
     display: list-item; // Add the correct display in all browsers
+    cursor: pointer;
 }
 
 template {
