--- a/scss/component/_pagination.scss
+++ b/scss/component/_pagination.scss
@@ -35,6 +35,7 @@
     position: relative;
     color: $pagination-color;
     text-decoration: none;
+    cursor: pointer;
 
     &:hover,
     &:focus {
@@ -54,7 +55,7 @@
     &.disabled {
         color: $pagination-disabled-color;
         pointer-events: none;
-        cursor: $cursor-disabled;
+        cursor: auto;
         background-color: $pagination-disabled-bg;
     }
 }
