--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -74,25 +74,6 @@
     margin-left: if($num == 0, 0, percentage($num));
 }
 
-@mixin make-col-push($size, $columns: $grid-columns) {
-    left: if($size > 0, percentage($size / $columns), auto);
-}
-
-@mixin make-col-pull($size, $columns: $grid-columns) {
-    right: if($size > 0, percentage($size / $columns), auto);
-}
-
-@mixin make-col-modifier($type, $size, $columns) {
-    // Work around the lack of dynamic mixin @include support (https://github.com/sass/sass/issues/626)
-    @if $type == push {
-        @include make-col-push($size, $columns);
-    } @else if $type == pull {
-        @include make-col-pull($size, $columns);
-    } @else if $type == offset {
-        @include make-col-offset($size, $columns);
-    }
-}
-
 
 // Gutters
 @mixin check-gutter-change($breakpoint, $gutters: $grid-gutter-widths) {
@@ -190,19 +171,11 @@
                 }
             }
 
-            @each $modifier in (pull, push) {
-                @for $i from 0 through $columns {
-                    .#{$modifier}#{$bprule}-#{$i} {
-                        @include make-col-modifier($modifier, $i, $columns);
-                    }
-                }
-            }
-
             // `$columns - 1` because offsetting by the width of an entire row isn't possible
             @for $i from 0 through ($columns - 1) {
                 @if not($bprule == "" and $i == 0) { // Avoid emitting useless .offset-0
                     .offset#{$bprule}-#{$i} {
-                        @include make-col-modifier(offset, $i, $columns);
+                        @include make-col-offset($i, $columns);
                     }
                 }
             }
