--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -32,7 +32,7 @@
 @import "component/drag";
 @import "component/progress";
 @import "component/embed";
-@import "component/list-group";
+@import "component/list";
 @import "component/button-group";
 @import "component/input-group";
 @import "component/breadcrumb";
