re-add `.list-unstyled`

--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -50,6 +50,10 @@ mark,
     background-color: $mark-bg;
 }
 
+// Lists
+.list-unstyled {
+    @include list-unstyled;
+}
 
 //  Abbr extension
 .initialism {
