Add list group variant

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -451,6 +451,7 @@ $list-item-action-hover-bg:     $component-hover-bg !default;
 
 $list-border-width:             $border-width !default;
 $list-border-color:             $component-border-color !default;
+$list-group-border-radius:      $border-radius !default;
 
 $list-bulleted-content:         "\25cf\a0" !default; // Geomentric shape - black circle and a space
 $list-ordered-delimeter:        "\a0" !default; // Space
