Adjust card columns with orphans/widows to fix some Chrome layout

--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -252,6 +252,9 @@
             margin-bottom: $card-margin-bottom;
             column-count: $card-columns-count;
             column-gap: $card-columns-column-gap;
+            orphans: 1;
+            widows: 1;
+
 
             > .card {
                 margin-top: $card-margin-bottom;
