--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -69,10 +69,13 @@
 }
 
 .cf-header-social {
-  -ms-flex-direction: row;
-      flex-direction: row;
-  -ms-flex-align: center;
-      align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .cf-header-social .nav-link {
@@ -296,8 +299,9 @@
 }
 
 .cf-toc {
-  -ms-flex-order: 2;
-      order: 2;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-size: 0.875rem;
@@ -941,6 +945,7 @@ h4 > code {
 }
 
 .example-row {
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -987,16 +992,18 @@ h4 > code {
 
 @media (min-width: 36em) {
   .example-content-main {
-    -ms-flex: 0 0 50%;
-        flex: 0 0 50%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
     max-width: 50%;
   }
 }
 
 @media (min-width: 62em) {
   .example-content-main {
-    -ms-flex: 0 0 66.666667%;
-        flex: 0 0 66.666667%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 66.666667%;
+            flex: 0 0 66.666667%;
     max-width: 66.666667%;
   }
 }
@@ -1039,16 +1046,18 @@ h4 > code {
 
 @media (min-width: 36em) {
   .example-content-secondary {
-    -ms-flex: 0 0 50%;
-        flex: 0 0 50%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
     max-width: 50%;
   }
 }
 
 @media (min-width: 62em) {
   .example-content-secondary {
-    -ms-flex: 0 0 33.333333%;
-        flex: 0 0 33.333333%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 33.333333%;
+            flex: 0 0 33.333333%;
     max-width: 33.333333%;
   }
 }
@@ -1099,12 +1108,16 @@ h4 > code {
 }
 
 .card-deck-col {
-  -ms-flex-flow: row wrap;
-      flex-flow: row wrap;
-  -ms-flex-align: stretch;
-      align-items: stretch;
-  -ms-flex-pack: start;
-      justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin-right: -1rem;
   margin-bottom: 0;
   margin-left: -1rem;
@@ -1723,13 +1736,15 @@ h4 > code {
 
 .player {
   display: none;
-  -ms-flex-align: center;
-      align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 20px;
   white-space: nowrap;
 }
 
 .player.ready {
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
@@ -1753,6 +1768,7 @@ h4 > code {
 }
 
 .player-seek {
+  display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   width: 100px;
