--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -98,6 +98,7 @@ fieldset:disabled a.btn,
     &.disabled,
     &:disabled {
         text-decoration: none;
+        pointer-events: none
     }
 
     &:not(:disabled):not(.disabled):active,
