Allow customizing blockquote footer prepend content

--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -74,6 +74,6 @@ mark,
     color: $blockquote-footer-color;
 
     &::before {
-        content: "\2014 \00A0"; // em dash, nbsp
+        content: $blockquote-footer-content;
     }
 }
