--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -272,6 +272,7 @@ $blockquote-font-size:          ($font-size-base * 1.1875) !default;
 $blockquote-color:              $body-color !default;
 $blockquote-footer-font-size:   $font-size-base !default;
 $blockquote-footer-color:       $uibase-500 !default;
+$blockquote-footer-content:     "\2014\A0" !default; // em dash, nbsp
 
 $dt-font-weight:    $font-weight-bold !default;
 
