--- a/scss/mixins/_tables.scss
+++ b/scss/mixins/_tables.scss
@@ -30,12 +30,11 @@
 @mixin table-scroll() {
     display: block;
     width: 100%;
+    margin-bottom: $table-margin-bottom;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
 
-    // Prevent double border on horizontal scroll due to `display: block;`
-    &.table-bordered {
-        border: 0;
+    > .table {
+        margin-bottom: 0;
     }
 }
