Fix pointers for `.close` and `.drag`

--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -14,7 +14,7 @@
         opacity: .75;
     }
 
-    .close:not(:disabled):not(.disabled) {
+    &:not(:disabled):not(.disabled) {
         cursor: pointer;
     }
 }
