--- a/scss/component/_drag.scss
+++ b/scss/component/_drag.scss
@@ -15,7 +15,7 @@
         opacity: .75;
     }
 
-    .close:not(:disabled):not(.disabled) {
+    &:not(:disabled):not(.disabled) {
         cursor: move;
     }
 }
