List color and cursor tweaks

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -446,7 +446,7 @@ $list-item-disabled-color:      $component-disabled-color !default;
 $list-item-active-bg:           $component-active-bg !default;
 $list-item-active-color:        $component-active-color !default;
 $list-item-active-border:       $component-active-border-color !default;
-$list-item-action-color:        $uibase-700 !default;
+$list-item-action-color:        $component-action-color !default;
 $list-item-action-hover-color:  $list-item-action-color !default;
 $list-item-action-hover-bg:     $component-hover-bg !default;
 
