--- a/scss/core/_print.scss
+++ b/scss/core/_print.scss
@@ -74,18 +74,23 @@
         .badge {
             border: $border-width solid #000;
         }
-        .table {
-            border-collapse: collapse !important;
 
+        .table {
+            color: inherit !important;
+            border-collapse: collapse !important;
+            border-color: $table-border-color !important;
+
+            thead,
+            tbody,
+            tfoot {
+                color: inherit !important;
+            }
+
+            tr,
             td,
             th {
+                color: inherit !important;
                 background-color: #fff !important;
-            }
-        }
-        .table-bordered {
-            th,
-            td {
-                border: $table-border-width solid #ddd !important;
             }
         }
 
