--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -58,10 +58,10 @@ $uibase:    #5e7182 !default;
 $white:     #fff !default;
 $gray:      #666 !default;
 $black:     #000 !default;
-$red:       #df2314 !default;
-$green:     #10ac21 !default;
-$blue:      #005ff1 !default;
-$cyan:      #137db4 !default;
+$red:       #d42314 !default;
+$green:     #0e8a16 !default;
+$blue:      #0055e9 !default;
+$cyan:      #1680a4 !default;
 $yellow:    #f8c223 !default;
 $light:     palette($uibase, 50) !default;
 $dark:      palette($uibase, 800) !default;
