--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -8,25 +8,44 @@
     > .form-control,
     > .custom-select,
     > .custom-file {
-        // Ensure that the input is always above the *appended* addon button for
-        // proper border colors.
-        position: relative;
-        z-index: 1;
+        position: relative;  // Needed for z-index on focus/active state
         flex: 1 1 auto;
         width: 1%;
-        // Size form input to input group height
-        height: auto;
         margin-bottom: 0;
-
-        + .form-control,
-        + .custom-select {
-            margin-left: -$input-border-width;
-        }
 
         // Bring the "active" form control to the front
         @include hover-focus-active {
-            z-index: 2;
+            z-index: 3;
         }
+
+        + .form-control,
+        + .custom-select,
+        + .custom-file {
+            margin-left: -$input-border-width;
+        }
+    }
+
+    > .form-control,
+    > .custom-select {
+        &:not(:first-child) { @include border-start-radius(0); }
+        &:not(:last-child) { @include border-end-radius(0); }
+    }
+
+    // Custom file inputs have more complex markup,
+    // needing special overrides.
+    > .custom-file {
+        .custom-file-control {
+            z-index: 0;
+        }
+
+        .custom-file-input {
+            &:focus ~ .custom-file-control {
+                z-index: 2;
+            }
+        }
+
+        &:not(:first-child) .custom-file-control { @include border-start-radius(0); }
+        &:not(:last-child) .custom-file-control { @include border-end-radius(0); }
     }
 }
 
@@ -34,23 +53,14 @@
 .input-group-btn,
 .input-group > .form-control,
 .input-group > .custom-select,
-.input-group > .custom-file-control {
+.input-group > .custom-file {
     display: flex;
     align-items: center;
-
-    &:not(:first-child):not(:last-child) {
-        @include border-radius(0);
-    }
 }
 
 .input-group-addon,
 .input-group-btn {
     white-space: nowrap;
-}
-
-.input-group > .custom-file {
-    display: flex;
-    align-items: center;
 }
 
 // Text input groups
@@ -63,7 +73,6 @@
     color: $input-group-addon-color;
     text-align: center;
     background-color: $input-group-addon-bg;
-    background-clip: padding-box;
     border: $input-border-width solid $input-group-addon-border-color;
     @include border-radius($border-radius);
 
@@ -76,18 +85,18 @@
     // stylelint-enable selector-no-qualifying-type
 }
 
-.has-sucess,
-.has-warning,
-.has-danger {
-    .input-group-btn {
-        &:not(:first-child) {
-            > .btn,
-            > .btn-group {
-                z-index: 1;
-            }
-        }
-    }
-}
+//.has-sucess,
+//.has-warning,
+//.has-danger {
+//    .input-group-btn {
+//        &:not(:first-child) {
+//            > .btn,
+//            > .btn-group {
+//                z-index: 1;
+//            }
+//        }
+//    }
+//}
 
 // Button input groups
 .input-group-btn {
@@ -102,9 +111,9 @@
     // element above the siblings.
     > .btn {
         position: relative;
+        z-index: 2;
         // Vertically stretch the button and center its content
         align-self: stretch;
-        background-clip: padding-box;
 
         + .btn {
             margin-left: (-$input-border-width);
@@ -112,7 +121,7 @@
 
         // Bring the "active" button to the front
         @include hover-focus-active {
-            z-index: 2;
+            z-index: 3;
         }
     }
 
